--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="edit_text_imail">ایمیل</string>
     <string name="button_vorod">ورود</string>
     <string name="button_cancle">انصراف</string>
+    <string name="text_myemail">Hyousefi412@gmail.com</string>
+    <string name="link_github">https://github.com/HUsefi</string>
+    <string name="text_about_me">Hello Dear ...Here is about me</string>
 </resources>
